--- a/templates/user/change_password.html
+++ b/templates/user/change_password.html
@@ -4,34 +4,37 @@
 
 {% block content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-      <div class="site-box">
-        <h3>修改密码</h3>
-        <hr>
-        <form action="{% url 'change_password' %}" method="post">
-          {% csrf_token %}
-          {% for field in form %}
-          {% if field.is_hidden %}
-            {{ field }}
-          {% else %}
-            <div class="form-group">
-              <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-              {{ field }}
-            </div>
-            <!-- 错误提示消息 -->
-            <p class="text-danger text-right">{{ field.errors.as_text }}</p>
-            {% endif %}
-            {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class="site-box">
+                    <h3>修改密码</h3>
+                    <hr>
+                    <form action="{% url 'change_password' %}" method="post">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            {% if field.is_hidden %}
+                                {{ field }}
+                            {% else %}
+                                <div class="form-group">
+                                    <label for="{{ field.id_for_label }}">
+                                        {{ field.label }}</label>
+                                    {{ field }}
+                                </div>
+                                <!-- 错误提示消息 -->
+                                <p class="text-danger text-right">
+                                    {{ field.errors.as_text }}</p>
+                            {% endif %}
+                        {% endfor %}
 
-            <div class="text-right">
-              <button class="btn btn-primary" type="submit">确认修改</button>
+                        <div class="text-right">
+                            <button class="btn btn-primary" type="submit">确认修改
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </form>
-      </div>
+        </div>
     </div>
-  </div>
-</div>
 
 {% endblock %}
