--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -4,37 +4,38 @@
 
 {% block content %}
 
-{% load myfilter %}
-<div class="container">
-  <div class="form-register">
-    <h3>注册账户</h3>
-    <p>加入知乎儿, 新的开始</p>
-    <hr>
-    <form action="{% url 'register' %}", method="post">
-      {% csrf_token %}
-      {% for field in register_form %}
-      <div class="form-group">
-        {{ field.errors }}
-        {{ field.label_tag }}
-        {{ field|widget_add_class:'form-control' }}
-      </div>
-      {% endfor %}
-      <div class="text-right">
-        <button type="submit" class="btn btn-primary" name="">注册</button>
-      </div>
-    </form>
-    <hr>
-    <p>已有账号, 直接 <a href="{% url 'user_login' %}">登录</a></p>
-  </div>
-</div>
+    {% load myfilter %}
+    <div class="container">
+        <div class="form-register">
+            <h3>注册账户</h3>
+            <p>加入知乎儿, 新的开始</p>
+            <hr>
+            <form action="{% url 'register' %}" , method="post">
+                {% csrf_token %}
+                {% for field in register_form %}
+                    <div class="form-group">
+                        {{ field.errors }}
+                        {{ field.label_tag }}
+                        {{ field|widget_add_class:'form-control' }}
+                    </div>
+                {% endfor %}
+                <div class="text-right">
+                    <button type="submit" class="btn btn-primary" name="">注册
+                    </button>
+                </div>
+            </form>
+            <hr>
+            <p>已有账号, 直接 <a href="{% url 'user_login' %}">登录</a></p>
+        </div>
+    </div>
 
-<script>
-$('.captcha').click(function () {
-$.getJSON("/captcha/refresh/", function (result) {
-    $('.captcha').attr('src', result['image_url']);
-    $('#id_captcha_0').val(result['key'])
-});
-});
-</script>
+    <script>
+        $('.captcha').click(function () {
+            $.getJSON("/captcha/refresh/", function (result) {
+                $('.captcha').attr('src', result['image_url']);
+                $('#id_captcha_0').val(result['key'])
+            });
+        });
+    </script>
 
 {% endblock %}
