--- a/templates/user/user_base.html
+++ b/templates/user/user_base.html
@@ -4,114 +4,166 @@
 
 {% block content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="site-box">
-        <div class="media">
-          <div class="media-left"><img width="160" height="160" src="{{ MEDIA_URL }}{{ user.image }}" alt="头像" class="media-left"></div>
-          <div class="media-body">
-            <h3 class="media-heading username-big">{{ user.nickname }}</h3>
-            <p>{{ user.description|default_if_none:'' }}</p>
-            <p class="text-muted"> {% if user.gender == 'M' %}<i class="fa fa-mars fa-2x"></i>{% elif user.gender == 'F' %}<i class="fa fa-venus fa-2x"></i>{% endif %}</p>
-            {% if user.address %}<p><span class="user-profile">居住地</span><span>{{ user.address }}</span></p>{% endif %}
-            {% if user == request.user %}
-            <div class="text-right"><a href="{% url 'edit_profile' %}"><button class="btn btn-default">编辑个人资料</button></a></div>
-            {% else %}
-            <div class="text-right"><button class="btn btn-primary" onclick="follow_user(this, {{ user.id }})">{% if has_follow_user %}取消关注{% else %}关注 TA{% endif %}</button></div>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="site-box">
-        <div class="nav nav-pills header-bar">
-          <li class="{% if request.path|slice:'-6:' == '/home/' %}active{% endif %}"><a href="{% url 'user_home' user.id %}">动态</a></li>
-          <li class="{% if request.path|slice:'-8:' == '/answer/' %}active{% endif %}"><a href="{% url 'user_answer' user.id %}">回答</a></li>
-          <li class="{% if request.path|slice:'-10:' == '/question/' %}active{% endif %}"><a href="{% url 'user_question' user.id %}">提问</a></li>
-          <!-- <li><a href="">想法</a></li> -->
-          <li class="dropdown {% if request.path|slice:'-6:' != '/home/' and request.path|slice:'-8:' != '/answer/' and request.path|slice:'-10:' != '/question/' %}active{% endif %}">
-            <a href="" class="dropdown-toggle" data-toggle="dropdown">更多
-            <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="{% url 'user_collect_answer' user.id %}">收藏的回答</a></li>
-              <li><a href="{% url 'user_follow_topic' user.id %}">关注的话题</a></li>
-              <li><a href="{% url 'user_follow_question' user.id %}">关注的问题</a></li>
-              <li><a href="{% url 'user_follow_user' user.id %}">关注</a></li>
-              <li><a href="{% url 'user_followed_by_user' user.id %}">关注者</a></li>
-            </ul>
-          </li>
-        </div>
-        <hr>
-        {% block user_content %}
-        
-        {% endblock %}
-      </div>
-    </div>
-
-    <div class="col-sm-4">
-      <div class="site-box">
-        <h4>个人成就</h4>
-        <hr>
-        <p><span class="glyphicon glyphicon-thumbs-up"></span> 获得 {{ user.get_answer_by_followed_nums }} 次赞同</p>
-        <p><span class="glyphicon glyphicon-star"></span> 获得 {{ user.get_answer_by_collected_nums }} 次收藏</p>
-      </div>
-      <div class="site-box">
+    <div class="container">
         <div class="row">
-          <div class="col-sm-6">
-            <p class="text-center">关注了</p>
-            <p class="text-center"><a class="info-num" href="{% url 'user_follow_user' user.id %}">{{ user.get_follow_user_nums }}</a></p>
-          </div>
-          <div class="col-sm-6">
-            <p class="text-center">关注者</p>
-            <p class="text-center"><a class="info-num" href="{% url 'user_followed_by_user' user.id %}">{{ user.get_followed_by_user_nums }}</a></p>
-          </div>
+            <div class="col-sm-12">
+                <div class="site-box">
+                    <div class="media">
+                        <div class="media-left"><img width="160" height="160"
+                                                     src="{{ MEDIA_URL }}{{ user.image }}"
+                                                     alt="头像"
+                                                     class="media-left">
+                        </div>
+                        <div class="media-body">
+                            <h3 class="media-heading username-big">
+                                {{ user.nickname }}</h3>
+                            <p>{{ user.description|default_if_none:'' }}</p>
+                            <p class="text-muted"> {% if user.gender == 'M' %}<i
+                                    class="fa fa-mars fa-2x"></i>
+                            {% elif user.gender == 'F' %}
+                                <i class="fa fa-venus fa-2x"></i>{% endif %}</p>
+                            {% if user.address %}<p><span
+                                    class="user-profile">居住地</span><span>{{ user.address }}</span>
+                            </p>{% endif %}
+                            {% if user == request.user %}
+                            <div class="text-right"><a
+                                    href="{% url 'edit_profile' %}">
+                                <button class="btn btn-default">编辑个人资料</button>
+                            </a></div>
+                            {% else %}
+                            <div class="text-right">
+                                <button class="btn btn-primary"
+                                        onclick="follow_user(this, {{ user.id }})">
+                                    {% if has_follow_user %}取消关注{% else %}关注 TA
+                                        {% endif %}
+                                        </button>
+                                        </div>
+                                    {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="site-box">
+                    <div class="nav nav-pills header-bar">
+                        <li class="{% if request.path|slice:'-6:' == '/home/' %}active{% endif %}">
+                            <a href="{% url 'user_home' user.id %}">动态</a></li>
+                        <li class="{% if request.path|slice:'-8:' == '/answer/' %}active{% endif %}">
+                            <a href="{% url 'user_answer' user.id %}">回答</a>
+                        </li>
+                        <li class="{% if request.path|slice:'-10:' == '/question/' %}active{% endif %}">
+                            <a href="{% url 'user_question' user.id %}">提问</a>
+                        </li>
+                        <!-- <li><a href="">想法</a></li> -->
+                        <li class="dropdown {% if request.path|slice:'-6:' != '/home/' and request.path|slice:'-8:' != '/answer/' and request.path|slice:'-10:' != '/question/' %}active{% endif %}">
+                            <a href="" class="dropdown-toggle"
+                               data-toggle="dropdown">更多
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="{% url 'user_collect_answer' user.id %}">收藏的回答</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'user_follow_topic' user.id %}">关注的话题</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'user_follow_question' user.id %}">关注的问题</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'user_follow_user' user.id %}">关注</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'user_followed_by_user' user.id %}">关注者</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </div>
+                    <hr>
+                    {% block user_content %}
 
-      <div class="site-box">
-        <div class="nav nav-pills nav-stacked">
-          <li><a href="{% url 'user_collect_answer' user.id %}"><span class="badge pull-right">{{ user.get_collect_answer_nums }}</span>收藏的回答</a></li>
-          <li><a href="{% url 'user_follow_topic' user.id %}"><span class="badge pull-right">{{ user.get_topic_nums }}</span>关注的话题</a></li>
-          <li><a href="{% url 'user_follow_question' user.id %}"><span class="badge pull-right">{{ user.get_follow_question_nums }}</span>关注的问题</a></li>
+                    {% endblock %}
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="site-box">
+                    <h4>个人成就</h4>
+                    <hr>
+                    <p><span class="glyphicon glyphicon-thumbs-up"></span> 获得
+                        {{ user.get_answer_by_followed_nums }} 次赞同</p>
+                    <p><span class="glyphicon glyphicon-star"></span> 获得
+                        {{ user.get_answer_by_collected_nums }} 次收藏</p>
+                </div>
+                <div class="site-box">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p class="text-center">关注了</p>
+                            <p class="text-center"><a class="info-num"
+                                                      href="{% url 'user_follow_user' user.id %}">
+                                {{ user.get_follow_user_nums }}</a></p>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="text-center">关注者</p>
+                            <p class="text-center"><a class="info-num"
+                                                      href="{% url 'user_followed_by_user' user.id %}">
+                                {{ user.get_followed_by_user_nums }}</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="site-box">
+                    <div class="nav nav-pills nav-stacked">
+                        <li>
+                            <a href="{% url 'user_collect_answer' user.id %}"><span
+                                    class="badge pull-right">{{ user.get_collect_answer_nums }}</span>收藏的回答</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'user_follow_topic' user.id %}"><span
+                                    class="badge pull-right">{{ user.get_topic_nums }}</span>关注的话题</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'user_follow_question' user.id %}"><span
+                                    class="badge pull-right">{{ user.get_follow_question_nums }}</span>关注的问题</a>
+                        </li>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
 
-<script type=text/javascript>
-  function follow_user (dom, user_id) {
-    var old_path = location.pathname;
-    $.ajax({
-      type:'GET',
-      async:true,
-      url:"{% url 'follow_user' %}",
-      data:{'user_id':user_id},
-      cache:false,
-      success:function (data) {
-        if(data.status == 'success') {
-          $(dom).text(data.message);
-        }else {
-          location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+    <script type=text/javascript>
+        function follow_user(dom, user_id) {
+            var old_path = location.pathname;
+            $.ajax({
+                type: 'GET',
+                async: true,
+                url: "{% url 'follow_user' %}",
+                data: {'user_id': user_id},
+                cache: false,
+                success: function (data) {
+                    if (data.status == 'success') {
+                        $(dom).text(data.message);
+                    } else {
+                        location.href = "{% url 'user_login' %}" + '?next=' + old_path;
+                    }
+                },
+                error: function (xhr, error_message, error) {
+                    alert('请求出错');
+                },
+            });
         }
-      },
-      error:function (xhr, error_message, error) {
-        alert('请求出错');
-      },
-    });
-  }
 
-</script>
+    </script>
 
 {% endblock %}
 
 {% block custom_css %}
 
-{% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/font-awesome.min.css' %}">
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css"
+          href="{% static 'css/font-awesome.min.css' %}">
 
 {% endblock %}
