--- a/templates/user/email/user_confirm.html
+++ b/templates/user/email/user_confirm.html
@@ -6,4 +6,6 @@
 
 <p>https://{{ host }}{% url 'user_confirm' token %}</p>
 
-<p><small>该邮件来自知乎儿, 不用回复.</small></p>
+<p>
+    <small>该邮件来自知乎儿, 不用回复.</small>
+</p>
