--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -4,38 +4,44 @@
 
 {% block content %}
 
-{% load myfilter %}
-<div class="container">
-  <div class="form-login">
-    {% if messages %}
-    <div class="messages">
-      {% for message in messages %}
-      <p class="alert alert-info alert-dismissable">
-        <button class="close" type="button" data-dismiss="alert">&times;</button>{{ message }}</p>
-      {% endfor %}
-    </div>
-    {% endif %}
+    {% load myfilter %}
+    <div class="container">
+        <div class="form-login">
+            {% if messages %}
+                <div class="messages">
+                    {% for message in messages %}
+                        <p class="alert alert-info alert-dismissable">
+                            <button class="close" type="button"
+                                    data-dismiss="alert">
+                                &times;
+                            </button>
+                            {{ message }}
+                        </p>
+                    {% endfor %}
+                </div>
+            {% endif %}
 
-    <h3>登录</h3>
-    <p>登录知乎儿, 发现不同</p>
-    <hr>
-    <form action="{% url 'user_login' %}", method="post">
-      {% csrf_token %}
-      {% for field in login_form %}
-      <div class="form-group">
-        {{ field.errors }}
-        {{ field.label_tag }}
-        {{ field|widget_add_class:'form-control' }}
-      </div>
-      {% endfor %}
-      <input type="hidden" name="next" value="{{ request.GET.next }}">
-      <div class="text-right">
-        <button type="submit" class="btn btn-primary" name="">登录</button>
-      </div>
-    </form>
-    <hr>
-    <p>还没有账号, 何不 <a href="{% url 'register' %}">注册账户</a></p>
-    <p>忘记密码?, 点击这里 <a href="{% url 'reset_password' %}">找回密码</a></p>
-  </div>
-</div>
+            <h3>登录</h3>
+            <p>登录知乎儿, 发现不同</p>
+            <hr>
+            <form action="{% url 'user_login' %}" , method="post">
+                {% csrf_token %}
+                {% for field in login_form %}
+                    <div class="form-group">
+                        {{ field.errors }}
+                        {{ field.label_tag }}
+                        {{ field|widget_add_class:'form-control' }}
+                    </div>
+                {% endfor %}
+                <input type="hidden" name="next" value="{{ request.GET.next }}">
+                <div class="text-right">
+                    <button type="submit" class="btn btn-primary" name="">登录
+                    </button>
+                </div>
+            </form>
+            <hr>
+            <p>还没有账号, 何不 <a href="{% url 'register' %}">注册账户</a></p>
+            <p>忘记密码?, 点击这里 <a href="{% url 'reset_password' %}">找回密码</a></p>
+        </div>
+    </div>
 {% endblock %}
