--- a/templates/user/reset_password.html
+++ b/templates/user/reset_password.html
@@ -4,84 +4,90 @@
 
 {% block content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-      <div class="site-box">
-        <h3>重置密码</h3>
-        <hr>
-        <form action="{% url 'reset_password' %}" method="post">
-          {% csrf_token %}
-          {% for field in form %}
-          {% if field.is_hidden %}
-            {{ field }}
-          {% else %}
-            <div class="form-group">
-              <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-              {{ field }}
-            </div>
-            <!-- 错误提示消息 -->
-            <p class="text-danger text-right">{{ field.errors.as_text }}</p>
-            {% endif %}
-            {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class="site-box">
+                    <h3>重置密码</h3>
+                    <hr>
+                    <form action="{% url 'reset_password' %}" method="post">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            {% if field.is_hidden %}
+                                {{ field }}
+                            {% else %}
+                                <div class="form-group">
+                                    <label for="{{ field.id_for_label }}">
+                                        {{ field.label }}</label>
+                                    {{ field }}
+                                </div>
+                                <!-- 错误提示消息 -->
+                                <p class="text-danger text-right">
+                                    {{ field.errors.as_text }}</p>
+                            {% endif %}
+                        {% endfor %}
 
-            <div class="text-right">
-              <button class="btn btn-primary" type="button" id="check_code">获取验证码</button>
-              <button class="btn btn-primary" type="submit">确定</button>
+                        <div class="text-right">
+                            <button class="btn btn-primary" type="button"
+                                    id="check_code">获取验证码
+                            </button>
+                            <button class="btn btn-primary" type="submit">确定
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </form>
-      </div>
+        </div>
     </div>
-  </div>
-</div>
 
 {% endblock %}
 
 {% block custom_js %}
 
-<script type="text/javascript">
-  $(function () {
-    $('#check_code').click(function () {
-      var email_error = $('.text-danger')[0];
-      var email = $('#id_email').val();
-      email_error.innerText = '';
-      var email_reg = /^([a-zA-Z0-9]+[\-|\_|\.]?)*[a-zA-Z0-9]+@([a-zA-Z0-9]+[\-|\_|\.]?)*[a-zA-Z0-9]+\.[a-zA-Z]{2,3}$/;
-      if(!email_reg.test(email)) {
-        email_error.innerText = '* 请输入正确的邮箱';
-        return false;
-      };
+    <script type="text/javascript">
+        $(function () {
+            $('#check_code').click(function () {
+                var email_error = $('.text-danger')[0];
+                var email = $('#id_email').val();
+                email_error.innerText = '';
+                var email_reg = /^([a-zA-Z0-9]+[\-|\_|\.]?)*[a-zA-Z0-9]+@([a-zA-Z0-9]+[\-|\_|\.]?)*[a-zA-Z0-9]+\.[a-zA-Z]{2,3}$/;
+                if (!email_reg.test(email)) {
+                    email_error.innerText = '* 请输入正确的邮箱';
+                    return false;
+                }
+                ;
 
-      $.ajax({
-        type: 'GET',
-        url: "{% url 'get_check_code' %}?email=" + email,
-        cache: false,
-        success: function(data) {
-          if(data.status == 'success') {
-            var check_code_tip = $('.text-danger')[3];
-            check_code_tip.innerText = '验证码已发送到你的邮箱';
-            // 发送验证码后, 禁用按钮1分钟
-            var time = 60;
-            $('#check_code').addClass('disabled');
-            $('#check_code').text('('+time+'s)'+'重新获取')
-            var timer = setInterval(() => {
-              if(time<=0) {
-                clearInterval(timer);
-                $('#check_code').removeClass('disabled');
-                $('#check_code').text('获取验证码');
-                return false;
-              }
-              time = time - 1;
-              $('#check_code').text('('+time+'s)'+'重新获取');
-            }, 1000);
-          }else{
-            alert(data.message);
-          }
-        },
-        error: function(XMLHttpRequest, textStatus, errorThrown) {
-          alert('获取验证码出错, 请稍后再试')
-        },
-      });
-    });
-  });
-</script>
+                $.ajax({
+                    type: 'GET',
+                    url: "{% url 'get_check_code' %}?email=" + email,
+                    cache: false,
+                    success: function (data) {
+                        if (data.status == 'success') {
+                            var check_code_tip = $('.text-danger')[3];
+                            check_code_tip.innerText = '验证码已发送到你的邮箱';
+                            // 发送验证码后, 禁用按钮1分钟
+                            var time = 60;
+                            $('#check_code').addClass('disabled');
+                            $('#check_code').text('(' + time + 's)' + '重新获取')
+                            var timer = setInterval(() => {
+                                if (time <= 0) {
+                                    clearInterval(timer);
+                                    $('#check_code').removeClass('disabled');
+                                    $('#check_code').text('获取验证码');
+                                    return false;
+                                }
+                                time = time - 1;
+                                $('#check_code').text('(' + time + 's)' + '重新获取');
+                            }, 1000);
+                        } else {
+                            alert(data.message);
+                        }
+                    },
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                        alert('获取验证码出错, 请稍后再试')
+                    },
+                });
+            });
+        });
+    </script>
 {% endblock %}
