--- a/templates/zhihu/ask_question.html
+++ b/templates/zhihu/ask_question.html
@@ -5,48 +5,53 @@
 
 {% block content %}
 
-{% load staticfiles %}
-{% load myfilter %}
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
-      <div class="site-box">
+    {% load staticfiles %}
+    {% load myfilter %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2">
+                <div class="site-box">
 
-        {% if messages %}
-        <div class="messages">
-          {% for message in messages %}
-          <p class="alert alert-info alert-dismissable">
-            <button class="close" type="button" data-dismiss="alert">&times;</button>{{ message }}</p>
-          {% endfor %}
+                    {% if messages %}
+                        <div class="messages">
+                            {% for message in messages %}
+                                <p class="alert alert-info alert-dismissable">
+                                    <button class="close" type="button"
+                                            data-dismiss="alert">&times;
+                                    </button>
+                                    {{ message }}
+                                </p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {% for field in ask_question_form %}
+                            <div class="form-group">
+                                {{ field.errors }}
+                                {{ field.label_tag }}
+                                {{ field }}
+                            </div>
+                        {% endfor %}
+                        <div class="text-right">
+                            <button class="btn btn-primary" type="submit">提问
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        {% endif %}
-    
-        <form action="" method="post">
-          {% csrf_token %}
-          {% for field in ask_question_form %}
-          <div class="form-group">
-            {{ field.errors }}
-            {{ field.label_tag }}
-            {{ field }}
-          </div>
-          {% endfor %}
-          <div class="text-right">
-            <button class="btn btn-primary" type="submit">提问</button>
-          </div>
-        </form>
-      </div>
     </div>
-  </div>
-</div>
 
 {% endblock %}
 
 {% block custom_js %}
-<!-- 下拉菜单js -->
-  <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+    <!-- 下拉菜单js -->
+    <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
 {% endblock %}
 
 {% block custom_css %}
-<!-- 下拉菜单样式 -->
-  <link href="{% static 'css/bootstrap-select.min.css' %}" rel="stylesheet">
+    <!-- 下拉菜单样式 -->
+    <link href="{% static 'css/bootstrap-select.min.css' %}" rel="stylesheet">
 {% endblock %}
