--- a/templates/zhihu/paginator.html
+++ b/templates/zhihu/paginator.html
@@ -1,21 +1,23 @@
 <nav style="text-align: center">
-  <ul class="pagination center_block">
-    {% if page.has_previous %}
-    <li><a href="?page={{ page.previous_page_number }}">上一页</a></li>
-    {% endif %}
-    {% for page_number in page.page_range_ex %}
-      {% if page_number %}
-        {% if page_number == page.number %}
-        <li class="active"><a href="?page={{ page_number }}">{{ page_number }}</a></li>
-        {% else %}
-        <li><a href="?page={{ page_number }}">{{ page_number }}</a></li>
+    <ul class="pagination center_block">
+        {% if page.has_previous %}
+            <li><a href="?page={{ page.previous_page_number }}">上一页</a></li>
         {% endif %}
-      {% else %}
-        <li><a href="javascript:;">...</a></li>
-      {% endif %}
-    {% endfor %}
-    {% if page.has_next %}
-    <li><a href="?page={{ page.next_page_number }}">下一页</a></li>
-    {% endif %}
-  </ul>
+        {% for page_number in page.page_range_ex %}
+            {% if page_number %}
+                {% if page_number == page.number %}
+                    <li class="active"><a href="?page={{ page_number }}">
+                        {{ page_number }}</a></li>
+                {% else %}
+                    <li><a href="?page={{ page_number }}">{{ page_number }}</a>
+                    </li>
+                {% endif %}
+            {% else %}
+                <li><a href="javascript:;">...</a></li>
+            {% endif %}
+        {% endfor %}
+        {% if page.has_next %}
+            <li><a href="?page={{ page.next_page_number }}">下一页</a></li>
+        {% endif %}
+    </ul>
 </nav>
