--- a/templates/zhihu/topic_list.html
+++ b/templates/zhihu/topic_list.html
@@ -6,67 +6,93 @@
 
 {% block content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="site-box">
-        <h4>话题广场</h4>
-        <hr>
-        {% if request.user.is_authenticated %}
-        <p>你已关注 {{ request.user.get_topic_nums }} 个话题</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="site-box">
+                    <h4>话题广场</h4>
+                    <hr>
+                    {% if request.user.is_authenticated %}
+                        <p>你已关注 {{ request.user.get_topic_nums }} 个话题</p>
 
-        <div class="user-topic">
-        {% for topic in request.user.topic_set.all %}
-          <a href="{% url 'topic_detail' topic.id %}"><button class="btn btn-default" type="button">{{ topic.name }}</button></a>
-        {% empty %}
-        <p>暂时没有关注话题</p>
-        {% endfor %}
-        </div>
-        <hr>
-        {% endif %}
+                        <div class="user-topic">
+                            {% for topic in request.user.topic_set.all %}
+                                <a href="{% url 'topic_detail' topic.id %}">
+                                    <button class="btn btn-default"
+                                            type="button">{{ topic.name }}
+                                    </button>
+                                </a>
+                            {% empty %}
+                                <p>暂时没有关注话题</p>
+                            {% endfor %}
+                        </div>
+                        <hr>
+                    {% endif %}
 
-        <div class="topic-list">
-          {% for topic in page.object_list %}
-          <div class="topic-item">
-            <div class="meida">
-              <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" height="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
-              <div class="media-body">
-                <h4 class="media-heading"><a  target="_blank" href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a> 
-                  <!-- <span class="text-muted right-info"><a href="{% url 'topic_detail' topic.id %}">关注</a></span> -->
-                </h4>
-                {% if topic.description %}
-                <p>{{ topic.description|striptags|truncatechars:30 }}</p>
-                {% else %}
-                <p>话题暂时没有描述</p>
-                {% endif %}
-              </div>
+                    <div class="topic-list">
+                        {% for topic in page.object_list %}
+                            <div class="topic-item">
+                                <div class="meida">
+                                    <a target="_blank"
+                                       href="{% url 'topic_detail' topic.id %}"
+                                       class="media-left"><img width="50"
+                                                               height="50"
+                                                               src="
+
+                                                                       {{ MEDIA_URL }}{{ topic.image }}"
+                                                               alt="话题"
+                                                               class="media-object"></a>
+                                    <div class="media-body">
+                                        <h4 class="media-heading"><a
+                                                target="_blank"
+                                                href="{% url 'topic_detail' topic.id %}">
+                                            {{ topic.name }}</a>
+                                            <!-- <span class="text-muted right-info"><a href="{% url 'topic_detail' topic.id %}">关注</a></span> -->
+                                        </h4>
+                                        {% if topic.description %}
+                                            <p>
+                                                {{ topic.description|striptags|truncatechars:30 }}</p>
+                                        {% else %}
+                                            <p>话题暂时没有描述</p>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+
+                    {% include 'zhihu/paginator.html' %}
+                </div>
+
             </div>
-          </div>
-          {% endfor %}
+
+            <div class="col-sm-4">
+                <div class="site-box">
+                    <h4>热门话题</h4>
+                    <hr>
+                    {% for topic in hot_topics %}
+                        <div class="media">
+                            <a target="_blank"
+                               href="{% url 'topic_detail' topic.id %}"
+                               class="media-left"><img width="50" height="50"
+                                                       src="
+
+                                                               {{ MEDIA_URL }}{{ topic.image }}"
+                                                       alt="话题"
+                                                       class="media-object"></a>
+                            <div class="media-body">
+                                <p><b><a target="_blank"
+                                         href="{% url 'topic_detail' topic.id %}">
+                                    {{ topic.name }}</a></b></p>
+                                <p class="text-muted">{{ topic.get_user_nums }}
+                                    人关注</p>
+                            </div>
+                        </div>
+                        <hr>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-
-        {% include 'zhihu/paginator.html' %}
-      </div>
-
     </div>
-
-    <div class="col-sm-4">
-      <div class="site-box">
-        <h4>热门话题</h4>
-        <hr>
-        {% for topic in hot_topics %}
-        <div class="media">
-          <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" height="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
-          <div class="media-body">
-            <p><b><a target="_blank" href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a></b></p>
-            <p class="text-muted">{{ topic.get_user_nums }} 人关注</p>
-          </div>
-        </div>
-        <hr>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-</div>
 
 {% endblock %}
